--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "mocha-chai-sinon",
   "version": "0.0.0",
   "description": "See the tutorial at: https://nicolas.perriault.net/code/2013/testing-frontend-javascript-code-using-mocha-chai-and-sinon/",
-  "main": "js/conversordos.js",
+  "main": "js/main.js",
   "scripts": {
-    "test": "mocha index",
+    "test": "open index.html",
     "chai": "curl https://raw.githubusercontent.com/chaijs/chai/master/chai.js -o vendor/chai.js",
     "sinon": "curl http://sinonjs.org/releases/sinon-1.12.2.js -o vendor/sinon-1.12.2.js"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/crguezl/mocha-chai-sinon--example.git"
+    "url": "https://github.com/Luisdavidpm/karma-y-travis-luisdaomar"
+
   },
   "devDependencies": {
     "chai": "^3.5.0",
