--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "js/main.js",
   "scripts": {
     "test": "open index.html",
-    "chai": "curl https://raw.githubusercontent.com/chaijs/chai/master/chai.js -o vendor/chai.js",
-    "sinon": "curl http://sinonjs.org/releases/sinon-1.12.2.js -o vendor/sinon-1.12.2.js"
+    "chai": "curl https://raw.githubusercontent.com/chaijs/chai/master/chai.js -o vendor/chai.js"
   },
   "repository": {
     "type": "git",
