--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-util": "^3.0.7",
     "karma": "^0.13.22",
     "karma-chai": "^0.1.0",
+    "karma-mocha": "^0.2.2",
     "karma-chrome-launcher": "^0.2.3",
     "karma-firefox-launcher": "^0.1.7",
     "karma-safari-launcher": "^0.1.1"
