--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "See the tutorial at: https://nicolas.perriault.net/code/2013/testing-frontend-javascript-code-using-mocha-chai-and-sinon/",
   "main": "js/main.js",
   "scripts": {
-    "test": "grunt build --verbose",
+    "test": "./node_modules/karma/bin/karma start --browsers Chrome --single-run",
     "chai": "curl https://raw.githubusercontent.com/chaijs/chai/master/chai.js -o vendor/chai.js"
   },
   "repository": {
@@ -27,6 +27,7 @@
     "karma-firefox-launcher": "^0.1.7",
     "karma-safari-launcher": "^0.1.1"
   },
+
   "keywords": [
     "mocha",
     "chai",
